--- a/app/src/main/res/drawable/text_input_background.xml
+++ b/app/src/main/res/drawable/text_input_background.xml
@@ -2,7 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_focused="true">
-
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <solid android:color="@android:color/white" />
+            <stroke android:width="1dp" android:color="@color/dark_gray" />
+        </shape>
     </item>
 
     <item>
