--- a/app/src/main/res/layout/active_now_list.xml
+++ b/app/src/main/res/layout/active_now_list.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rv_active_now"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    tools:orientation="horizontal"
-    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:itemCount="7"
     tools:listitem="@layout/active_now_item">
 
