--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,12 +16,15 @@
         android:id="@+id/img_profile"
         android:layout_width="72dp"
         android:layout_height="72dp"
+        android:adjustViewBounds="true"
         android:background="@drawable/image_background"
+        android:scaleType="centerCrop"
         android:src="@drawable/baseline_person_24"
         app:contentPadding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:shapeAppearanceOverlay="@style/circleImageView" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/view_active"
